--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@tensorflow-models/deeplab": "^0.2.2",
     "@tensorflow/tfjs-node": "4.15.0",
     "@tensorflow/tfjs-node-gpu": "^4.15.0",
+    "color": "^4.2.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-http-proxy": "^2.0.0",
     "fs": "^0.0.1-security",
-    "jimp": "^0.22.10",
+    "image-size": "^1.0.2",
+    "jimp": "^0.3.5",
     "node-pre-gyp": "^0.17.0",
     "pngjs": "^7.0.0",
     "sharp": "^0.33.1",
