--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node .",
     "training": "npx ts-node -r tsconfig-paths/register --transpiler sucrase/ts-node-plugin training/index.ts",
-    "test": "npx ts-node -r tsconfig-paths/register --transpiler sucrase/ts-node-plugin training/test.ts",
+    "test": "npx ts-node -r tsconfig-paths/register --transpiler sucrase/ts-node-plugin test/test.ts",
     "dev": "npx ts-node -r tsconfig-paths/register --transpiler sucrase/ts-node-plugin src/index.ts",
     "build": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist",
     "lint": "eslint --ext .tsx,.ts --fix ./src -c .eslintrc.json"
@@ -23,9 +23,9 @@
   "homepage": "https://github.com/Ashu11-A/Manga-Converter#readme",
   "dependencies": {
     "@img/sharp-win32-x64": "^0.33.1",
-    "@tensorflow-models/deeplab": "^0.2.2",
-    "@tensorflow/tfjs-node": "4.15.0",
-    "@tensorflow/tfjs-node-gpu": "^4.15.0",
+    "@tensorflow/tfjs": "^4.15.0",
+    "@tensorflow/tfjs-converter": "^4.15.0",
+    "@tensorflow/tfjs-node": "^4.15.0",
     "color": "^4.2.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
