--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,8 @@ jax==0.4.23
 jaxlib==0.4.23
 joblib==1.3.2
 keras==2.15.0
+keras-tuner==1.4.6
+kt-legacy==1.0.5
 libclang==16.0.6
 Markdown==3.5.1
 markdown-it-py==3.0.0
@@ -64,6 +66,7 @@ requests==2.31.0
 requests-oauthlib==1.3.1
 rich==13.7.0
 rsa==4.9
+scikeras==0.12.0
 scikit-learn==1.3.2
 scipy==1.11.4
 six==1.16.0
