--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "manga converter in dark mode",
   "start": "index.ts",
   "scripts": {
-    "start": "node .",
+    "start": "node --expose-gc dist/index.js",
     "start:test": "npx ts-node -r tsconfig-paths/register --transpiler sucrase/ts-node-plugin test/test.ts",
     "start:dev": "npx ts-node -r tsconfig-paths/register --transpiler sucrase/ts-node-plugin src/index.ts",
     "build": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist",
+    "product": "npm run build && npm run start",
     "lint": "eslint --ext .tsx,.ts --fix ./src -c .eslintrc.json"
   },
   "repository": {
@@ -21,6 +22,7 @@
   },
   "homepage": "https://github.com/Ashu11-A/Manga-Converter#readme",
   "dependencies": {
+    "@img/sharp-win32-x64": "^0.33.1",
     "@tensorflow/tfjs": "^4.15.0",
     "@tensorflow/tfjs-converter": "^4.15.0",
     "@tensorflow/tfjs-node": "^4.15.0",
@@ -32,6 +34,7 @@
     "express": "^4.18.2",
     "express-http-proxy": "^2.0.0",
     "fs": "^0.0.1-security",
+    "heapdump": "^0.3.15",
     "http-proxy-middleware": "^2.0.6",
     "image-size": "^1.0.2",
     "jimp": "^0.3.5",
@@ -40,11 +43,13 @@
     "pngjs": "^7.0.0",
     "sharp": "^0.33.1",
     "table": "^6.8.1",
+    "tscpaths": "^0.0.9",
     "tslib": "^2.6.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/express-http-proxy": "^1.6.6",
+    "@types/heapdump": "^0.3.4",
     "@types/pngjs": "^6.0.4",
     "sucrase": "^3.34.0",
     "tsconfig-paths": "^4.2.0",
