🗑️ Fix: data processing overwriting

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   },
   "homepage": "https://github.com/Ashu11-A/Manga-Converter#readme",
   "dependencies": {
-    "@img/sharp-win32-x64": "^0.33.1",
     "@tensorflow/tfjs": "^4.15.0",
+    "@tensorflow/tfjs-backend-wasm": "^4.15.0",
     "@tensorflow/tfjs-converter": "^4.15.0",
     "@tensorflow/tfjs-node": "^4.15.0",
     "@tensorflow/tfjs-node-gpu": "^4.15.0",
