--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ jaxlib==0.4.23
 jedi==0.19.1
 Jinja2==3.1.2
 joblib==1.3.2
+keras==2.15.0
 keras-tuner==1.4.6
 kiwisolver==1.4.5
 kt-legacy==1.0.5
@@ -87,6 +88,9 @@ pyasn1==0.5.1
 pyasn1-modules==0.3.0
 Pygments==2.17.2
 pyparsing==3.1.1
+PyQt5==5.15.10
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.13.0
 python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==6.0.1
@@ -114,9 +118,11 @@ tensorflow-examples @ git+https://github.com/tensorflow/examples.git@fff4bcda720
 tensorflow-hub==0.15.0
 tensorflow-io-gcs-filesystem==0.35.0
 tensorflow-metadata==1.14.0
+tensorflow-model-optimization==0.7.5
 tensorflowjs==4.15.0
 tensorstore==0.1.45
 termcolor==2.4.0
+tf-keras==2.15.0
 thop==0.1.1.post2209072238
 threadpoolctl==3.2.0
 toml==0.10.2
