🚀 Yolo Model Implement

--- a/src/settings.json
+++ b/src/settings.json
@@ -7,6 +7,7 @@
     "compress": {
         "minCompressLength": 1024
     },
+    "model": "yolo",
     "tensorflow": {
         "bestModel": 22
     },
