--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+    "root": true,
     "env": {
         "node": true,
         "es2021": true,
@@ -6,16 +7,15 @@
         "commonjs": true
     },
     "parser": "@typescript-eslint/parser",
-    "extends": "standard-with-typescript",
     "parserOptions": {
         "ecmaVersion": "latest",
-        "sourceType": "module",
-        "project": ["./tsconfig.json"]
+        "project": ["tsconfig.json"]
     },
     "plugins": [
         "@typescript-eslint"
     ],
     "rules": {
+        "indent": ["error", 2],
         "no-new": "off",
         "@typescript-eslint/naming-convention": "off"
     }
