--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "manga-converter",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "manga converter in dark mode",
   "start": "index.ts",
   "scripts": {
-    "start": "node --expose-gc dist/index.js",
-    "start:test": "npx ts-node -r tsconfig-paths/register --transpiler sucrase/ts-node-plugin test/test.ts",
-    "start:dev": "npx ts-node -r tsconfig-paths/register --transpiler sucrase/ts-node-plugin src/index.ts",
-    "build": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist",
+    "start": "node --expose-gc dist/src/index.js",
+    "start:test": "ts-node -r tsconfig-paths/register test/test.ts",
+    "start:dev": "ts-node -r tsconfig-paths/register src/index.ts",
+    "build": "tsc && tsc-alias",
     "production": "npm run build && npm run start",
-    "lint": "eslint --ext .tsx,.ts --fix ./src -c .eslintrc.json"
+    "lint": "eslint --ext .tsx,.ts --fix ./**/*.ts -c .eslintrc.json"
   },
   "repository": {
     "type": "git",
@@ -22,39 +22,39 @@
   },
   "homepage": "https://github.com/Ashu11-A/Manga-Converter#readme",
   "dependencies": {
-    "@tensorflow/tfjs": "^4.15.0",
-    "@tensorflow/tfjs-backend-wasm": "^4.15.0",
-    "@tensorflow/tfjs-converter": "^4.15.0",
-    "@tensorflow/tfjs-node": "^4.15.0",
-    "@tensorflow/tfjs-node-gpu": "^4.15.0",
-    "@types/lodash": "^4.14.202",
+    "@tensorflow/tfjs-backend-wasm": "^4.19.0",
+    "@tensorflow/tfjs-converter": "^4.19.0",
+    "@tensorflow/tfjs-node": "^4.19.0",
+    "@tensorflow/tfjs-node-gpu": "^4.19.0",
+    "@types/glob": "^8.1.0",
     "axios": "^1.6.5",
-    "color": "^4.2.3",
-    "dotenv": "^16.3.1",
+    "canvas": "^2.11.2",
     "express": "^4.18.2",
-    "express-http-proxy": "^2.0.0",
-    "fs": "^0.0.1-security",
-    "got": "^14.0.0",
-    "heapdump": "^0.3.15",
-    "http-proxy-middleware": "^2.0.6",
+    "glob": "^10.4.1",
     "image-size": "^1.0.2",
-    "jimp": "^0.3.5",
     "lodash": "^4.17.21",
-    "node-pre-gyp": "^0.17.0",
-    "pngjs": "^7.0.0",
     "probe-image-size": "^7.2.3",
-    "sharp": "^0.33.1",
+    "sharp": "^0.33.4",
     "table": "^6.8.1",
-    "tscpaths": "^0.0.9",
     "tslib": "^2.6.2"
   },
   "devDependencies": {
+    "@tensorflow/tfjs-layers": "^4.19.0",
     "@types/express": "^4.17.21",
     "@types/express-http-proxy": "^1.6.6",
     "@types/heapdump": "^0.3.4",
+    "@types/lodash": "^4.17.4",
     "@types/pngjs": "^6.0.4",
     "@types/probe-image-size": "^7.2.4",
-    "sucrase": "^3.34.0",
+    "@types/sharp": "^0.32.0",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "@typescript-eslint/parser": "^7.12.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^17.7.0",
+    "eslint-plugin-promise": "^6.2.0",
+    "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
   }
