--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ asttokens==2.4.1
 astunparse==1.6.3
 cachetools==5.3.2
 certifi==2023.11.17
+cffi==1.16.0
 charset-normalizer==3.3.2
 chex==0.1.85
 click==8.1.7
+coloredlogs==15.0.1
 contourpy==1.2.0
 cycler==0.12.1
 decorator==5.1.1
@@ -19,23 +21,25 @@ flatbuffers==23.5.26
 flax==0.7.5
 fonttools==4.47.0
 fsspec==2023.12.2
-gast==0.5.4
+gast==0.4.0
 google-auth==2.25.2
-google-auth-oauthlib==1.2.0
+google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
 googleapis-common-protos==1.62.0
 grpcio==1.60.0
 gviz-api==1.10.0
 h5py==3.10.0
+humanfriendly==10.0
 idna==3.6
 imageio==2.33.1
 importlib-resources==6.1.1
+ipython==8.25.0
 jax==0.4.23
 jaxlib==0.4.23
 jedi==0.19.1
 Jinja2==3.1.2
 joblib==1.3.2
-keras==2.15.0
+keras==2.13.1
 keras-tuner==1.4.6
 kiwisolver==1.4.5
 kt-legacy==1.0.5
@@ -53,7 +57,7 @@ msgpack==1.0.7
 namex==0.0.7
 nest-asyncio==1.5.8
 networkx==3.2.1
-numpy==1.26.2
+numpy==1.24.3
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvcc-cu12==12.2.140
@@ -68,9 +72,15 @@ nvidia-nccl-cu12==2.18.1
 nvidia-nvjitlink-cu12==12.2.140
 nvidia-nvtx-cu12==12.1.105
 oauthlib==3.2.2
-opencv-python==4.9.0.80
+onnx==1.16.1
+onnx-graphsurgeon==0.5.2
+onnx2tf==1.17.5
+onnxruntime-gpu==1.18.0
+onnxsim==0.4.36
+opencv-python-headless==4.9.0.80
 opt-einsum==3.3.0
 optax==0.1.7
+optree==0.11.0
 orbax-checkpoint==0.4.4
 packaging==23.2
 pandas==2.1.4
@@ -86,6 +96,8 @@ pure-eval==0.2.2
 py-cpuinfo==9.0.0
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
+pybind11==2.12.0
+pycparser==2.22
 Pygments==2.17.2
 pyparsing==3.1.1
 PyQt5==5.15.10
@@ -104,41 +116,50 @@ scikit-learn==1.3.2
 scipy==1.11.4
 seaborn==0.13.1
 six==1.16.0
+sng4onnx==1.0.4
+sounddevice==0.4.7
 stack-data==0.6.3
 sympy==1.12
-tensorboard==2.15.1
+tensorboard==2.13.0
 tensorboard-data-server==0.7.2
 tensorboard-plugin-profile==2.15.0
-tensorflow==2.15.0.post1
+tensorflow==2.13.1
 tensorflow-addons==0.23.0
 tensorflow-datasets==4.9.4
 tensorflow-decision-forests==1.8.1
-tensorflow-estimator==2.15.0
+tensorflow-estimator==2.13.0
 tensorflow-examples @ git+https://github.com/tensorflow/examples.git@fff4bcda7201645a1efaea4534403daf5fc03d42
 tensorflow-hub==0.15.0
 tensorflow-io-gcs-filesystem==0.35.0
 tensorflow-metadata==1.14.0
 tensorflow-model-optimization==0.7.5
 tensorflowjs==4.15.0
+tensorrt==10.0.1
+tensorrt-cu12==10.0.1
+tensorrt-cu12-bindings==10.0.1
+tensorrt-cu12-libs==10.0.1
 tensorstore==0.1.45
 termcolor==2.4.0
 tf-keras==2.15.0
+tflite-support==0.4.4
 thop==0.1.1.post2209072238
 threadpoolctl==3.2.0
 toml==0.10.2
 toolz==0.12.0
 torch==2.1.2
+torch-tb-profiler==0.4.3
 torchvision==0.16.2
 tqdm==4.66.1
 traitlets==5.14.0
 triton==2.1.0
 typeguard==2.13.3
-typing_extensions==4.9.0
+typing_extensions==4.5.0
 tzdata==2023.3
-ultralytics==8.0.235
+ultralytics==8.2.2
 urllib3==2.1.0
 wcwidth==0.2.12
 Werkzeug==3.0.1
 wrapt==1.14.1
 wurlitzer==3.0.3
+ydf==0.4.3
 zipp==3.17.0
