--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,5 @@
     "skipDefaultLibCheck": true,
     "skipLibCheck": true
   },
-  "include": ["./src/**/*", "training/model"]
+  "include": ["src", "test"]
 }
